# tagsoup

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  CHANGES.txt  LICENSE  Main.hs  README.md  Setup.hs  TODO.txt  appveyor.yml  cmds.bat  push.bat  tagsoup.cabal  tagsoup.htm  test.hs
.github/workflows/: ci.yml
Data/Html/: Download.hs  TagSoup.hs
Data/Html/TagSoup/: Parser.hs  Test.hs
Example/: Benchmark.hs  Example.hs  Regress.hs  Test.hs  Validate.hs
TagSoup/: Benchmark.hs  Generate.hs  Sample.hs  Test.hs
TagSoup/Generate/: All.hs  Convert.hs  Desugar.hs  HSE.hs  Main.hs  Simplify.hs  Supercompile.hs  Type.hs  ungenerate.bat
TagSoup/Generate/programs/: MapIdReverse.hs  MapMap.hs  Primes.hs
Text/: HasCase.hs  StringLike.hs
Text/HTML/: Download.hs  TagSoup.hs
Text/HTML/TagSoup/: Entity.hs  Implementation.hs  Match.hs  MatchCI.hs  Options.hs  Options_.hs  Parser.hs  Parser2.hs  Parser_.hs  Position.hs  Render.hs  Specification.hs  String.hs  TagPos.hs  Test.hs  Tree.hs  Type.hs
Text/HTML/TagSoup/Development/: Parser.hs  ParserUtils.hs
Text/HTML/TagSoup/Old/: Parser2.hs
Text/HTML/TagSoup/Old/Development/: Parser.txt  Sample.hs
Text/HTML/TagSoup/Parser/: All.hs  Custom.hs  MTL.hs
Text/HTML/TagSoup2/: Out.hs  Parser.hs  Str.hs
Text/ParserCombinators/: LazyParse.hs
dead/: Parser.hs  Parser2.hs
dead/parser/: Main.hs  tagsoup.txt
dead/parser/Compiler/: CodeGen.hs  Lp.hs  OptimiseHs.hs  OptimiseLp.hs  Parser.hs  Util.hs
dead/parser/Compiler/old/: CodeGen.hs  Main.hs  Type.hs
html5/: Implementation.hs  Spec.hs
parser/: CodeGen.hs  Main.hs  Main2.hs  Parser.hs  Prefix.hs  Simplify.hs  Type.hs  prefix.txt  tagsoup.txt  tagsoup2.txt
parser/Compiler/: CodeGen.hs  CodeGen2.hs  Hs.hs  Optimise.hs  Parser.hs  Parser2.hs  Resolve.hs  Simplify2.hs  Type2.hs  Util.hs
parser/Compiler/old/: Simplify.hs
src/Text/: StringLike.hs
src/Text/HTML/: TagSoup.hs
src/Text/HTML/TagSoup/: Entity.hs  Generated.hs  Implementation.hs  Manual.hs  Options.hs  Specification.hs  Tree.hs  Tree.hs-boot  Type.hs
src/Text/HTML/TagSoup2/: Parser.hs
test/: Main.hs
test/TagSoup/: Benchmark.hs  Sample.hs  Test.hs
test/TagSoup/Generate/: .ghci  Desugar.hs  Main.hs  Simplify.hs  Translate.hs  Type.hs
test/TagSoup/Generate/programs/: Even.hs  Loop.hs  MapHead.hs  Rev.hs  Reverse.hs  Sharing.hs
util/prefs/: boring
