cabal-version:  >= 1.6
name:           tagsoup
version:        0.12.3
copyright:      Neil Mitchell 2006-2011
author:         Neil Mitchell <ndmitchell@gmail.com>
maintainer:     Neil Mitchell <ndmitchell@gmail.com>
homepage:       http://community.haskell.org/~ndm/tagsoup/
license:        BSD3
category:       XML
license-file:   LICENSE
build-type:     Simple
synopsis:       Parsing and extracting information from (possibly malformed) HTML/XML documents
description:
    TagSoup is a library for parsing HTML/XML. It supports the HTML 5 specification,
    and can be used to parse either well-formed XML, or unstructured and malformed HTML
    from the web. The library also provides useful functions to extract information
    from an HTML document, making it ideal for screen-scraping.
    .
    Users should start from the "Text.HTML.TagSoup" module.
extra-source-files:
    tagsoup.htm

source-repository head
    type:     darcs
    location: http://community.haskell.org/~ndm/darcs/tagsoup/

flag testprog
    default: False
    description: Build the test program

flag download
    default: False
    description: Build with Download module

library
    build-depends: base == 4.*, containers, bytestring, text

    if flag(download)
        build-depends: network
        exposed-modules: Text.HTML.Download

    exposed-modules:
        Text.HTML.TagSoup
        Text.HTML.TagSoup.Entity
        Text.HTML.TagSoup.Match
        Text.HTML.TagSoup.Tree
        Text.StringLike
    other-modules:
        Text.HTML.TagSoup.Generated
        Text.HTML.TagSoup.Implementation
        Text.HTML.TagSoup.Manual
        Text.HTML.TagSoup.Options
        Text.HTML.TagSoup.Parser
        Text.HTML.TagSoup.Render
        Text.HTML.TagSoup.Specification
        Text.HTML.TagSoup.Type

executable tagsoup
    if flag(testprog)
        buildable: True
        build-depends: QuickCheck == 2.4.*, time, deepseq == 1.1.*, directory, process
    else
        buildable: False

    main-is: Main.hs
    other-modules:
        TagSoup.Benchmark
        TagSoup.Sample
        TagSoup.Test
