cabal-version:  >= 1.18
name:           tagsoup
version:        0.14.1
copyright:      Neil Mitchell 2006-2017
author:         Neil Mitchell <ndmitchell@gmail.com>
maintainer:     Neil Mitchell <ndmitchell@gmail.com>
homepage:       https://github.com/ndmitchell/tagsoup#readme
bug-reports:    https://github.com/ndmitchell/tagsoup/issues
license:        BSD3
category:       XML
license-file:   LICENSE
build-type:     Simple
synopsis:       Parsing and extracting information from (possibly malformed) HTML/XML documents
tested-with:    GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2
description:
    TagSoup is a library for parsing HTML/XML. It supports the HTML 5 specification,
    and can be used to parse either well-formed XML, or unstructured and malformed HTML
    from the web. The library also provides useful functions to extract information
    from an HTML document, making it ideal for screen-scraping.
    .
    Users should start from the "Text.HTML.TagSoup" module.
extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/ndmitchell/tagsoup.git

flag testprog
    default: False
    manual: True
    description: Build the test program

library
    default-language: Haskell2010
    build-depends: base == 4.*, containers, bytestring, text

    exposed-modules:
        Text.HTML.TagSoup
        Text.HTML.TagSoup.Entity
        Text.HTML.TagSoup.Match
        Text.HTML.TagSoup.Tree
        Text.StringLike
    other-modules:
        Text.HTML.TagSoup.Generated
        Text.HTML.TagSoup.Implementation
        Text.HTML.TagSoup.Manual
        Text.HTML.TagSoup.Options
        Text.HTML.TagSoup.Parser
        Text.HTML.TagSoup.Render
        Text.HTML.TagSoup.Specification
        Text.HTML.TagSoup.Type

executable test-tagsoup
    default-language: Haskell2010
    if flag(testprog)
        buildable: True
        build-depends:
            base == 4.*, containers, bytestring, text,
            QuickCheck >= 2.4,
            deepseq >= 1.1,
            time, directory, process
    else
        buildable: False

    main-is: Main.hs
    other-modules:
        TagSoup.Benchmark
        TagSoup.Sample
        TagSoup.Test
